# Cross_Sucking

./: .gitignore  CLUSTER_DEPLOYMENT_CHECKLIST.md  FIXED_AND_READY.md  README.md  cleanup_project.py  patch_labels.py  pyproject.toml  requirements.txt  run_training.bat
_archive_v1/: archive_log.json
_archive_v1/annotations/: combined_group1_days1_4_clean_with_flags.csv  qa_flags.csv
_archive_v1/configs/: E02_simple_augmentation_final.yaml  split_protocol.yaml  train_binary_v3_intravideo.yaml  train_binary_v3_intravideo_boosted.yaml
_archive_v1/manifests/: MASTER_FINAL_CLEAN.csv  MASTER_FINAL_CLEAN_BOUNDARYFIX.csv  MASTER_FINAL_CLEAN_v2.csv  linked_events.csv  train_CLEAN_SEGMENTFIX.csv  train_CLEAN_SEGMENTFIX_NO_DOTUNDERSCORE.csv  train_FINAL_CLEAN.csv  val_CLEAN.csv  val_intravideo_20260105_162028.csv
_archive_v1/root/: READY_FOR_CLUSTER.md  TRAINING_PLAN.md  _tmp_read.py  activate.bat  setup_venv.bat  (+6 more)
analysis/: video_confound_check.txt
configs/: E02_simple_augmentation_final.yaml  E02_simple_augmentation_final.yaml.bak  _debug_1epoch.yaml  base.yaml  detect.yaml  eval.yaml  feral_cross_sucking.yaml  model.yaml  paths.yaml.example  pretrain.yaml  ssl_unlabeled_protocol.yaml  track.yaml  train.yaml  train_binary_baseline_old_split.yaml  train_binary_stable.yaml  train_binary_v3_anticonfound.yaml  train_binary_v3_intravideo_boosted.yaml  train_binary_v4.yaml  train_binary_v4_mvit.yaml  train_binary_v4_mvit_isaac.yaml  train_binary_v4_mvit_runpod.yaml  train_binary_v4_slowfast.yaml  train_binary_v4_x3d.yaml  train_binary_v4b_mvit_isaac.yaml  train_binary_v4c_mvit_isaac.yaml  train_binary_v4d_s1_mvit_isaac.yaml  train_binary_v4d_s2_mvit_isaac.yaml  tubes.yaml
docs/: experiment_log.md
scripts/: analyze_bout_stats.py  archive_old_artifacts.py  audit_event_extraction.py  check_video_confound.py  clean_and_check_manifests.py  clean_full_manifest.py  confirm_smoke_overlap.py  create_bout_splits_v4.py  create_final_splits.py  create_intravideo_split.py  create_test_events.py  create_unlabeled_ssl_manifest.py  eval_metrics.py  eval_model.py  extract_alt_camera.py  extract_clips_ffmpeg.py  extract_event_clips.py  extract_tail_multichip.py  fix_manifest_paths.py  generate_predictions.py  inference_aggregated.py  inspect_ckpt.py  inspect_ckpt_print_stats.py  make_review_pack.py  prepare_annotation_clips.py  prepare_feral_json.py  relink_cameras.py  resize_clips_feral.sh  setup_env.sh  setup_isaac.sh  setup_runpod.sh  smoke_dataloaders.py  smoke_preprocess.py  temperature_scaling.py  test_training_pipeline.py  train_feral.slurm  train_full.sbatch  train_isaac.slurm  train_isaac_v4b.slurm  train_isaac_v4c.slurm  (+7 more)
slurm/: E02_train.sh  train_E02.sh  train_E02_clean.sh  train_E02_cpu.sh
(+101 files in other folders)
